--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,11 @@ body {
   background-color: black;
 }
 
+h1 {
+  color: whitesmoke;
+  text-align: center;
+}
+
 .center {
   display: block;
   margin-left: auto;
